# IS212_ComeBeck

./: .flake8  .gitignore  Apply_Arrangement copy.html  Dockerfile  Dockerfile.test  Jenkinsfile  README.md  _env  classes.puml  coverage.xml  docker-compose.yml  esc  pyproject.toml  pytest.ini
.github/workflows/: End2EndTests.yml  IntegrationTests.yml  LinterChecks.yml  Linter_Checks_and_Unit_Tests.yml  UnitTests.yml  unittests.yml
backend/: main.py
backend/config/: Database.py  EmailTemplates.py  Environment.py
backend/models/: ApplicationModel.py  ArrangementModel.py  BaseModel.py  Department.py  EmployeeModel.py  EventModel.py  TeamEmployeeModel.py  TeamModel.py  __init__.py
backend/models/enums/: ApplicationHourEnum.py  EmployeeRoleEnum.py  EventLocationEnum.py  RecurrenceType.py
backend/models/generators/: __init__.py  datetime.py
backend/repositories/: ApplicationRepository.py  DepartmentRepository.py  EmployeeRepository.py  EventRepository.py  TeamEmployeeRepository.py  TeamRepository.py
backend/routers/: ApplicationRouter.py  AuthenticationRouter.py  DepartmentRouter.py  EmployeeRouter.py  EventRouter.py  TeamRouter.py
backend/schemas/: ApplicationSchema.py  BaseSchema.py  DepartmentSchema.py  EmployeeSchema.py  EventSchema.py  TeamEmployeeSchema.py  TeamSchema.py  TokenSchema.py
backend/services/: ApplicationService.py  AuthenticationService.py  DepartmentService.py  EmailService.py  EmployeeService.py  EventService.py  SchedulerService.py  TeamService.py  dependencies.py
db/postgres/: init.sql
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/lib/: auth.ts  cookie.ts
postgres/: init.sql
tests/BackendUnitTests/: test_Main.py
tests/BackendUnitTests/config/: test_Database.py  (+2 more)
tests/backend/: test_Main.py
(+109 files in other folders)
