[tool.poetry]
name = "is-212 wfh tracking system"
version = "0.1.0"
description = ""
authors = ["molincok <colinmok1000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"
pymongo = "^4.8.0"
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
