[tool.poetry]
name = "is-212 wfh tracking system"
version = "0.1.0"
description = ""
authors = ["molincok <colinmok1000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
pytz = "^2024.2"
python-dateutil = "^2.9.0.post0"
apscheduler = "3.10.4"
pytest = "^8.3.3"
coverage = {extras = ["toml"], version = "^7.6.1"}
pytest-cov = "^5.0.0"
freezegun = "^1.5.1"
pytest-mock = "^3.14.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
